--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,22 +1,186 @@
-name: deploy to cloudflare
+name: Test y Deploy OOP Exercise
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master, main ]
 
 jobs:
-  deploy:
+  test-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build (opcional)
-        run: echo "Hacer algo como un test"
-      - name: Publish to Cloudflare Pages
+        with:
+          fetch-depth: 0  # Necesario para obtener historial de commits
+      
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      
+      - name: Instalar dependencias
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+      
+      - name: Obtener información del commit
+        id: commit_info
+        run: |
+          AUTHOR_NAME="${{ github.event.head_commit.author.name }}"
+          AUTHOR_EMAIL="${{ github.event.head_commit.author.email }}"
+          COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
+          TIMESTAMP=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+          COMMIT_COUNT=$(git rev-list --count HEAD)
+          
+          echo "author_name=$AUTHOR_NAME" >> $GITHUB_OUTPUT
+          echo "author_email=$AUTHOR_EMAIL" >> $GITHUB_OUTPUT
+          echo "commit_message=$COMMIT_MESSAGE" >> $GITHUB_OUTPUT
+          echo "timestamp=$TIMESTAMP" >> $GITHUB_OUTPUT
+          echo "commit_count=$COMMIT_COUNT" >> $GITHUB_OUTPUT
+          
+          echo "👤 Desarrollador: $AUTHOR_NAME"
+          echo "📧 Email: $AUTHOR_EMAIL"
+          echo "💬 Mensaje: $COMMIT_MESSAGE"
+          echo "🕐 Timestamp: $TIMESTAMP"
+          echo "📊 Intento #$COMMIT_COUNT"
+      
+      - name: Ejecutar Tests de Python
+        id: run_tests
+        continue-on-error: true
+        run: |
+          set +e  # Desactivar exit-on-error temporalmente
+          echo "🧪 Ejecutando tests..."
+          python -m pytest tests/test_person.py -v --tb=short > test_output.txt 2>&1
+          TEST_EXIT_CODE=$?
+          set -e  # Reactivar exit-on-error
+          
+          # Extraer números del resumen final de pytest
+          # Busca líneas como: "6 failed, 2 passed in 0.03s" o "8 passed in 0.03s"
+          SUMMARY_LINE=$(grep -E "^=+ .* in [0-9]+\.[0-9]+s =+$" test_output.txt | tail -1)
+          
+          # Extraer tests pasados
+          if echo "$SUMMARY_LINE" | grep -q "passed"; then
+            PASSED=$(echo "$SUMMARY_LINE" | grep -oP '\d+(?= passed)' || echo "0")
+          else
+            PASSED="0"
+          fi
+          
+          # Extraer tests fallidos
+          if echo "$SUMMARY_LINE" | grep -q "failed"; then
+            FAILED=$(echo "$SUMMARY_LINE" | grep -oP '\d+(?= failed)' || echo "0")
+          else
+            FAILED="0"
+          fi
+          
+          TOTAL=$((PASSED + FAILED))
+          
+          echo "test_exit_code=$TEST_EXIT_CODE" >> $GITHUB_OUTPUT
+          echo "tests_passed=$PASSED" >> $GITHUB_OUTPUT
+          echo "tests_failed=$FAILED" >> $GITHUB_OUTPUT
+          echo "tests_total=$TOTAL" >> $GITHUB_OUTPUT
+          
+          if [ $TEST_EXIT_CODE -eq 0 ]; then
+            echo "status=success" >> $GITHUB_OUTPUT
+            echo "✅ Todos los tests pasaron: $PASSED/$TOTAL"
+          else
+            echo "status=failed" >> $GITHUB_OUTPUT
+            echo "❌ Tests fallidos: $FAILED/$TOTAL"
+          fi
+          
+          # NO hacemos exit aquí, dejamos que continue-on-error maneje el flujo
+      
+      - name: Generar reporte de errores (si falló)
+        if: steps.run_tests.outputs.status == 'failed'
+        run: |
+          echo "📝 Generando reporte de errores..."
+          
+          cat > error_report.txt << 'EOF'
+          ════════════════════════════════════════════════════════════════
+          ❌ REPORTE DE ERROR - Tests Fallidos
+          ════════════════════════════════════════════════════════════════
+          
+          Desarrollador: ${{ steps.commit_info.outputs.author_name }}
+          Email: ${{ steps.commit_info.outputs.author_email }}
+          Fecha/Hora: ${{ steps.commit_info.outputs.timestamp }}
+          Intento #: ${{ steps.commit_info.outputs.commit_count }}
+          Mensaje del commit: "${{ steps.commit_info.outputs.commit_message }}"
+          
+          ────────────────────────────────────────────────────────────────
+          📊 RESUMEN DE TESTS
+          ────────────────────────────────────────────────────────────────
+          Total de tests: ${{ steps.run_tests.outputs.tests_total }}
+          Tests pasados: ✅ ${{ steps.run_tests.outputs.tests_passed }}
+          Tests fallidos: ❌ ${{ steps.run_tests.outputs.tests_failed }}
+          
+          ────────────────────────────────────────────────────────────────
+          🔍 DETALLES DEL ERROR
+          ────────────────────────────────────────────────────────────────
+          
+          EOF
+          
+          cat test_output.txt >> error_report.txt
+          
+          echo "" >> error_report.txt
+          echo "════════════════════════════════════════════════════════════════" >> error_report.txt
+          echo "💡 SUGERENCIAS:" >> error_report.txt
+          echo "1. Revisa que tu clase Person esté en src/person.py" >> error_report.txt
+          echo "2. Verifica que __str__ retorne el formato correcto" >> error_report.txt
+          echo "3. Usa .title() para capitalizar nombres" >> error_report.txt
+          echo "4. El formato debe ser: 'Nombre Apellido'" >> error_report.txt
+          echo "════════════════════════════════════════════════════════════════" >> error_report.txt
+          
+          cat error_report.txt
+      
+      - name: Actualizar index.html con resultado
+        run: |
+          STATUS="${{ steps.run_tests.outputs.status }}"
+          AUTHOR="${{ steps.commit_info.outputs.author_name }}"
+          EMAIL="${{ steps.commit_info.outputs.author_email }}"
+          TIMESTAMP="${{ steps.commit_info.outputs.timestamp }}"
+          COMMIT_MSG="${{ steps.commit_info.outputs.commit_message }}"
+          COMMIT_NUM="${{ steps.commit_info.outputs.commit_count }}"
+          PASSED="${{ steps.run_tests.outputs.tests_passed }}"
+          TOTAL="${{ steps.run_tests.outputs.tests_total }}"
+          
+          # Escapar caracteres especiales para sed
+          AUTHOR_ESC=$(echo "$AUTHOR" | sed 's/[&/\]/\\&/g')
+          EMAIL_ESC=$(echo "$EMAIL" | sed 's/[&/\]/\\&/g')
+          COMMIT_MSG_ESC=$(echo "$COMMIT_MSG" | sed 's/[&/\]/\\&/g')
+          
+          sed -i "s/{{STATUS}}/$STATUS/g" index.html
+          sed -i "s/{{AUTHOR}}/$AUTHOR_ESC/g" index.html
+          sed -i "s/{{EMAIL}}/$EMAIL_ESC/g" index.html
+          sed -i "s/{{TIMESTAMP}}/$TIMESTAMP/g" index.html
+          sed -i "s/{{COMMIT_MESSAGE}}/$COMMIT_MSG_ESC/g" index.html
+          sed -i "s/{{COMMIT_COUNT}}/$COMMIT_NUM/g" index.html
+          sed -i "s/{{TESTS_PASSED}}/$PASSED/g" index.html
+          sed -i "s/{{TESTS_TOTAL}}/$TOTAL/g" index.html
+          
+          echo "✅ index.html actualizado con los resultados"
+      
+      - name: Publicar a Cloudflare Pages
         uses: cloudflare/pages-action@v1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: actions-ejemplo
           directory: ./
-      - name: Mensaje de despliegue  
-        run: echo "SE desplego la pagina!!!"
+      
+      - name: Subir reporte de errores como artifact (si falló)
+        if: steps.run_tests.outputs.status == 'failed'
+        uses: actions/upload-artifact@v4
+        with:
+          name: error-report-${{ github.run_number }}
+          path: error_report.txt
+          retention-days: 30
+      
+      - name: Mensaje final
+        run: |
+          if [ "${{ steps.run_tests.outputs.status }}" == "success" ]; then
+            echo "🎉 ¡ÉXITO! Tests pasados y página desplegada"
+            echo "👤 Desarrollador: ${{ steps.commit_info.outputs.author_name }}"
+            echo "✅ Tests: ${{ steps.run_tests.outputs.tests_passed }}/${{ steps.run_tests.outputs.tests_total }}"
+          else
+            echo "⚠️  Tests fallidos, pero página desplegada con reporte de error"
+            echo "📄 Descarga el reporte completo desde Artifacts"
+            echo "❌ Tests fallidos: ${{ steps.run_tests.outputs.tests_failed }}/${{ steps.run_tests.outputs.tests_total }}"
+          fi
